<resources>
    <string name="app_name">RetrofitExample</string>
    <string name="orders">Orders</string>
    <string name="books">Books</string>
    <string name="log_in">LOG IN</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="book_id">BookId</string>
    <string name="customer_name">CustomerName</string>
    <string name="submit_order">Submit Order</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="how_to_play">How To Play</string>
    <string name="Essay">dsdsd sdsdsd dsdsdsd sdsdsd sdsds dsdsd sdsd sdsd</string>
    <string name="essay">czxczcxdfd dsfsdf dfsdfsd hhhgh ttty</string>
</resources>