<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".network.LogInFragment">

    <EditText
        android:id="@+id/book_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/book_id"
        android:gravity="center"
        app:layout_constraintVertical_bias=".40"
        android:textSize="24sp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_id"
        app:layout_constraintVertical_bias="0"
        android:gravity="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/submit_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_name"
        app:layout_constraintVertical_bias=".70"/>

</androidx.constraintlayout.widget.ConstraintLayout>